--- a/pom.xml
+++ b/pom.xml
@@ -34,4 +34,29 @@
       <version>6.1.5.Final</version>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>hibernate3-maven-plugin</artifactId>
+          <version>2.2</version>
+          <configuration>
+            <components>
+              <component>
+                <name>hbm2ddl</name>
+                <implementation>jpaconfiguration</implementation>
+              </component>
+            </components>
+            <componentProperties>
+              <persistenceunit>mensajes</persistenceunit>
+              <outputfilename>schema.ddl</outputfilename>
+              <drop>false</drop>
+              <create>true</create>
+              <export>false</export>
+              <format>true</format>
+            </componentProperties>
+          </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
